kubernetes/applications/homeassistant/service-and-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: ha-external-service
  namespace: homelab
spec:
  type: ExternalName
  externalName: hassio.mcmumf.dev
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ha-external-ingress
  namespace: homelab
  nginx.ingress.kubernetes.io/configuration-snippet: |
    proxy_set_header Upgrade "websocket";
    proxy_set_header Connection "Upgrade";
spec:
  rules:
    - host: ha.mcmumf.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ha-external-service
                port:
                  number: 8123
